--- a/src/App.css
+++ b/src/App.css
@@ -77,7 +77,7 @@
   /* Layout  */
   
   .container {
-    max-width: 140rem;
+    max-width: 900px;
     margin: auto;
   }
   
@@ -100,20 +100,20 @@
   /* Layout  */
   
   header {
-    height: 10rem;
+    height: 8rem;
     box-shadow: rgba(255, 255, 255, 0.3) 0px 10px 10px -10px;
     background-color: #202020;
     width: 100%;
   
     & .container {
-      height: 10rem;
+      height: 8rem;
     }
   }
   
   .navbar-grid {
     grid-template-columns: 0.5fr 1fr;
     align-items: center;
-    height: 10rem;
+    height: 8rem;
     padding: 0 3.2rem;
   }
   
